--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -80,6 +80,7 @@ jobs:
           retention-days: 1
   deploy-pypi-packages:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')
     needs: run-tests-python
     permissions:
       contents: write
@@ -94,12 +95,21 @@ jobs:
         with:
           name: html_unit_test
           path: unittest_results/
+      - name: Download freeze artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: freeze
+          path: freeze/
+#      - name: Publish t2iapi to PyPI
+#        uses: pypa/gh-action-pypi-publish@release/v1
+#        with:
+#          password: ${{ secrets.PYPI_API_TOKEN }}
       - name: Attach artifacts to github release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             dist/*.whl
-            pip_freeze.txt
+            freeze/pip-freeze.txt
             unittest_results/*.html
           prerelease: ${{ !startsWith(github.ref, 'refs/tags/v') }}
