--- a/.github/workflows/build-python.yml
+++ b/.github/workflows/build-python.yml
@@ -110,6 +110,6 @@ jobs:
         with:
           files: |
             dist/*.whl
-            freeze/pip-freeze.txt
+            freeze/pip_freeze.txt
             unittest_results/*.html
           prerelease: ${{ !startsWith(github.ref, 'refs/tags/v') }}
